--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -41,7 +41,7 @@
                 android:background="@drawable/selector_background_empty"
                 android:clickable="true"
                 android:padding="16dp"
-                android:text="@string/fontello_heart_empty"
+                android:drawableLeft="@drawable/baseline_account_circle_24"
                 android:textSize="18dp"
                 tools:ignore="SpUsage" />
 
@@ -59,7 +59,7 @@
                     android:id="@+id/fragment_account_text_accounts"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Accounts" />
+                    android:text="Profile" />
             </com.felixawpw.indoormaps.view.MaterialRippleLayout>
 
         </LinearLayout>
@@ -75,13 +75,13 @@
                 android:background="@drawable/selector_background_empty"
                 android:clickable="true"
                 android:padding="16dp"
-                android:text="@string/fontello_heart_empty"
+                android:drawableLeft="@drawable/baseline_place_24"
                 android:textSize="18dp"
                 tools:ignore="SpUsage" />
 
             <com.felixawpw.indoormaps.view.MaterialRippleLayout
-                style="@style/RippleStyle"
                 android:id="@+id/fragment_account_link_added_places"
+                style="@style/RippleStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -94,40 +94,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Added Places" />
-            </com.felixawpw.indoormaps.view.MaterialRippleLayout>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical" >
-
-            <com.felixawpw.indoormaps.font.MaterialDesignIconsTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/selector_background_empty"
-                android:clickable="true"
-                android:padding="16dp"
-                android:text="@string/fontello_heart_empty"
-                android:textSize="18dp"
-                tools:ignore="SpUsage" />
-
-            <com.felixawpw.indoormaps.view.MaterialRippleLayout
-                android:id="@+id/fragment_account_link_history"
-                style="@style/RippleStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                app:rippleColor="@color/main_color_grey_400" >
-
-                <TextView
-                    android:id="@+id/fragment_account_text_history"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="History" />
             </com.felixawpw.indoormaps.view.MaterialRippleLayout>
 
         </LinearLayout>
@@ -162,41 +128,7 @@
                 android:background="@drawable/selector_background_empty"
                 android:clickable="true"
                 android:padding="16dp"
-                android:text="@string/fontello_heart_empty"
-                android:textSize="18dp"
-                tools:ignore="SpUsage" />
-
-            <com.felixawpw.indoormaps.view.MaterialRippleLayout
-                android:id="@+id/fragment_account_link_calibrate"
-                style="@style/RippleStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                app:rippleColor="@color/main_color_grey_400" >
-
-                <TextView
-                    android:id="@+id/fragment_account_text_calibrate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Calibrate Sensor" />
-            </com.felixawpw.indoormaps.view.MaterialRippleLayout>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical" >
-
-            <com.felixawpw.indoormaps.font.MaterialDesignIconsTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/selector_background_empty"
-                android:clickable="true"
-                android:padding="16dp"
-                android:text="@string/fontello_heart_empty"
+                android:drawableLeft="@drawable/baseline_exit_to_app_24"
                 android:textSize="18dp"
                 tools:ignore="SpUsage" />
 
