--- a/app/src/main/res/layout/fragment_add_marker_finishing.xml
+++ b/app/src/main/res/layout/fragment_add_marker_finishing.xml
@@ -137,6 +137,7 @@
                 android:background="@android:color/white" />
 
             <com.felixawpw.indoormaps.font.RobotoTextView
+                android:id="@+id/fragment_add_marker_finishing_text_second_image_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
