--- a/app/src/main/res/layout/list_item_processed_step.xml
+++ b/app/src/main/res/layout/list_item_processed_step.xml
@@ -8,15 +8,18 @@
     android:background="@drawable/selector_background_empty"
     android:id="@+id/list_item_default_main_layout">
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp" />
-
     <com.felixawpw.indoormaps.font.RobotoTextView
         android:id="@+id/text"
+        style="@style/TextViewAppearance.Caption1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="3"
+        android:paddingLeft="0dp"
+        android:textColor="@color/main_color_grey_700"
+        android:textSize="16sp" />
+
+    <com.felixawpw.indoormaps.font.RobotoTextView
+        android:id="@+id/text_mapname"
         style="@style/TextViewAppearance.Caption1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -24,15 +27,5 @@
         android:paddingLeft="0dp"
         android:textColor="@color/main_color_grey_700"
         android:textSize="16sp" />
-
-    <com.felixawpw.indoormaps.font.MaterialDesignIconsTextView
-        android:id="@+id/icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="16dp"
-        android:text="@string/material_icon_go_right"
-        android:padding="8dp"
-        android:textColor="@color/main_color_grey_700"
-        android:textSize="20dp" />
 
 </LinearLayout>
