--- a/app/src/main/res/layout/activity_add_new_map.xml
+++ b/app/src/main/res/layout/activity_add_new_map.xml
@@ -75,7 +75,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Fill numbers below in metric unit"
-        android:textSize="18dp" />
+        android:textSize="18dp"
+        android:textColor="@color/quantum_black_secondary_text"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -114,8 +115,10 @@
         android:id="@+id/activity_add_new_map_buttonAddMap"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:text="Button" />
+        android:background="@drawable/button_oval"
+        android:text="Submit"
+        android:textColor="@color/quantum_white_text"
+        android:layout_marginTop="8dp"/>
 
 
 </LinearLayout>
