--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,7 +6,6 @@
     android:fitsSystemWindows="true"
     android:orientation="vertical" >
 
-    <include layout="@layout/toolbar" />
 
     <com.felixawpw.indoormaps.view.PagerSlidingTabStrip
         android:id="@+id/activity_tab_universal_tabs"
@@ -18,7 +17,9 @@
         app:pstsDividerPadding="16dp"
         app:pstsIndicatorHeight="2dp"
         app:pstsIndicatorColor="@color/material_yellow_500"
-        app:pstsTabTextColor="@android:color/white" />
+        app:pstsTabTextColor="@android:color/white" >
+
+    </com.felixawpw.indoormaps.view.PagerSlidingTabStrip>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/activity_tab_universal_pager"
