--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -26,7 +26,7 @@
             <com.felixawpw.indoormaps.view.PinView
                 android:id="@+id/activity_map_view_image_plan"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="280dp"
                 android:layout_gravity="center" />
 
 
@@ -49,7 +49,8 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="48dp"
+                android:layout_height="0dp"
+                android:layout_weight="2"
                 android:background="@color/main_color_grey_100">
 
                 <com.felixawpw.indoormaps.font.MaterialDesignIconsTextView
@@ -98,7 +99,23 @@
             <com.nhaarman.listviewanimations.itemmanipulation.DynamicListView
                 android:id="@+id/activity_map_list_view"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="10"
+                >
+
+            </com.nhaarman.listviewanimations.itemmanipulation.DynamicListView>
+
+            <com.felixawpw.indoormaps.font.RobotoTextView
+                android:id="@+id/activity_map_text_report"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:textAlignment="textEnd"
+                android:textColor="@color/quantum_purple"
+                android:textSize="12dp"
+                android:text="Make a report"
                 />
 
         </LinearLayout>
