--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -18,7 +18,7 @@
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="32dp"
-            android:text="Account Details"
+            android:text="Your Places"
             android:textColor="@color/main_color_500"
             android:textSize="16sp"
             app:typeface="robotoLight" />
@@ -29,40 +29,6 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:background="@color/main_color_500" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical" >
-
-            <com.felixawpw.indoormaps.font.MaterialDesignIconsTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/selector_background_empty"
-                android:clickable="true"
-                android:padding="16dp"
-                android:drawableLeft="@drawable/baseline_account_circle_24"
-                android:textSize="18dp"
-                tools:ignore="SpUsage" />
-
-            <com.felixawpw.indoormaps.view.MaterialRippleLayout
-                android:id="@+id/fragment_account_link_accounts"
-                style="@style/RippleStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                app:rippleColor="@color/main_color_grey_400" >
-
-                <TextView
-                    android:id="@+id/fragment_account_text_accounts"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Profile" />
-            </com.felixawpw.indoormaps.view.MaterialRippleLayout>
-
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -98,6 +64,73 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical" >
+
+            <com.felixawpw.indoormaps.font.MaterialDesignIconsTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/selector_background_empty"
+                android:clickable="true"
+                android:padding="16dp"
+                android:drawableLeft="@drawable/baseline_report_black_24dp"
+                android:textSize="18dp"
+                tools:ignore="SpUsage" />
+
+            <com.felixawpw.indoormaps.view.MaterialRippleLayout
+                android:id="@+id/fragment_account_link_reports"
+                style="@style/RippleStyle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                app:rippleColor="@color/main_color_grey_400" >
+
+                <TextView
+                    android:id="@+id/fragment_account_text_report"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Reports" />
+            </com.felixawpw.indoormaps.view.MaterialRippleLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical" >
+
+            <com.felixawpw.indoormaps.font.MaterialDesignIconsTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/selector_background_empty"
+                android:clickable="true"
+                android:padding="16dp"
+                android:drawableLeft="@drawable/baseline_compass_calibration_black_24dp"
+                android:textSize="18dp"
+                tools:ignore="SpUsage" />
+
+            <com.felixawpw.indoormaps.view.MaterialRippleLayout
+                android:id="@+id/fragment_account_link_calibrate_scan_point"
+                style="@style/RippleStyle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                app:rippleColor="@color/main_color_grey_400" >
+
+                <TextView
+                    android:id="@+id/fragment_account_text_calibrate_scan_point"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Calibrate Scan Point" />
+            </com.felixawpw.indoormaps.view.MaterialRippleLayout>
+
+        </LinearLayout>
 
         <com.felixawpw.indoormaps.font.RobotoTextView
             android:layout_width="wrap_content"
