--- a/app/src/main/res/layout/fragment_add_marker_finishing.xml
+++ b/app/src/main/res/layout/fragment_add_marker_finishing.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".fragment.AddMarkerFinishingFragment"
+    android:paddingBottom="40dp"
     android:background="@color/material_purple_300">
 
     <!-- TODO: Update blank fragment layout -->
@@ -30,14 +31,13 @@
 
             <com.felixawpw.indoormaps.view.FloatLabeledEditText
                 android:id="@+id/fragment_add_marker_finishing_textName"
+                app:fletFloatingHint="Marker Description"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:fletFloatingHint="Marker Description"
-                app:fletHintTextColor="@color/main_color_grey_300"
+                app:fletHintTextColor="@color/quantum_black_hint_text"
                 app:fletSingleLine="true"
-                app:fletTextBackground="@drawable/edit_text_background_accent"
-                app:fletTextColor="@color/main_color_grey_700"></com.felixawpw.indoormaps.view.FloatLabeledEditText>
+                app:fletTextColor="@color/quantum_black_text"></com.felixawpw.indoormaps.view.FloatLabeledEditText>
         </LinearLayout>
 
         <LinearLayout
@@ -56,14 +56,13 @@
 
             <com.felixawpw.indoormaps.view.FloatLabeledEditText
                 android:id="@+id/fragment_add_marker_finishing_textDescription"
+                app:fletFloatingHint="Marker Description"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:fletFloatingHint="Marker Description"
-                app:fletHintTextColor="@color/main_color_grey_300"
+                app:fletHintTextColor="@color/quantum_black_hint_text"
                 app:fletSingleLine="true"
-                app:fletTextBackground="@drawable/edit_text_background_accent"
-                app:fletTextColor="@color/main_color_grey_700"></com.felixawpw.indoormaps.view.FloatLabeledEditText>
+                app:fletTextColor="@color/quantum_black_text"></com.felixawpw.indoormaps.view.FloatLabeledEditText>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -81,14 +80,13 @@
 
             <com.felixawpw.indoormaps.view.FloatLabeledEditText
                 android:id="@+id/fragment_add_marker_finishing_textType"
+                app:fletFloatingHint="Marker Description"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:fletFloatingHint="Marker Description"
-                app:fletHintTextColor="@color/main_color_grey_300"
+                app:fletHintTextColor="@color/quantum_black_hint_text"
                 app:fletSingleLine="true"
-                app:fletTextBackground="@drawable/edit_text_background_accent"
-                app:fletTextColor="@color/main_color_grey_700"></com.felixawpw.indoormaps.view.FloatLabeledEditText>
+                app:fletTextColor="@color/quantum_black_text"></com.felixawpw.indoormaps.view.FloatLabeledEditText>
         </LinearLayout>
 
 
@@ -98,6 +96,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
             android:background="@android:color/white" />
 
         <com.felixawpw.indoormaps.font.RobotoTextView
@@ -119,8 +118,8 @@
         <com.felixawpw.indoormaps.view.PinView
             android:id="@+id/fragment_add_marker_finishing_imageMapOrigin"
             style="@style/mainPanel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="280dp"
             android:layout_gravity="center" />
 
         <LinearLayout
@@ -156,8 +155,8 @@
             <com.felixawpw.indoormaps.view.PinView
                 android:id="@+id/fragment_add_marker_finishing_imageMapTarget"
                 style="@style/mainPanel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="280dp"
                 android:layout_gravity="center" />
 
         </LinearLayout>
